force-app/main/default/objects/Cluster__c/fields/Active_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_from_Date__c</fullName>
    <description>To register the start date of the Cluster</description>
    <inlineHelpText>To register the start date of the Cluster</inlineHelpText>
    <label>Active from Date</label>
    <type>Date</type>
</CustomField>