force-app/main/default/objects/Cluster__c/fields/Active_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_to_Date__c</fullName>
    <description>To register the end date of the cluster</description>
    <inlineHelpText>To register the end date of the cluster</inlineHelpText>
    <label>Active to Date</label>
    <type>Date</type>
</CustomField>