force-app/main/default/objects/Cluster__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Cluster code from WOCAS</description>
    <inlineHelpText>Cluster code vanuit Wocas</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>