force-app/main/default/objects/Cluster__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>To store important details about the Cluster</description>
    <inlineHelpText>To store important details about the Cluster</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>