force-app/main/default/objects/Cluster__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>To register an external ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Registreer hier het externe ID</inlineHelpText>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>